--- a/app/config.json
+++ b/app/config.json
@@ -1,3 +1,3 @@
 {
-  "serviceName": "Apply for a Companies House online filing presenter account (prototype)"
+  "serviceName": "Apply for a Companies House presenter account for online filing (prototype)"
 }
