--- a/app/config.json
+++ b/app/config.json
@@ -1,3 +1,3 @@
 {
-  "serviceName": "Apply to file company documents using software (prototype)"
+  "serviceName": "Apply to file with Companies House using software (prototype)"
 }
